# jinshiagent

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  final-verify.txt  pyproject.toml  requirements.txt
docs/: creation-guide.md  deployment.md  mcp-guide.md  quickstart.md  v0.4.0-features.md
examples/: e2e_demo.py  mcp_demo.py  multi_agent_demo.py  react_demo.py  simple_agent.py
src/jinshiagent/: __init__.py  main.py  server.py
src/jinshiagent/config/: __init__.py  loader.py
src/jinshiagent/core/: __init__.py  agent.py  message.py  multi_agent.py  tool_registry.py
src/jinshiagent/creation/: __init__.py  generator.py  prompts.py  templates.py
src/jinshiagent/llm/: __init__.py  client.py
src/jinshiagent/mcp/: __init__.py  adapter.py  client.py  mock_server.py  transport.py
src/jinshiagent/memory/: __init__.py  long_term.py  short_term.py
src/jinshiagent/tools/: __init__.py  calculator_tool.py  search_tool.py  tool_enhancements.py  weather_tool.py
src/jinshiagent/utils/: __init__.py  exceptions.py  logging.py
src/jinshiagent/workflow/: __init__.py
tests/: __init__.py  test_config_memory.py  test_core.py  test_creation.py  test_long_term_memory.py  test_mcp.py  test_memory_integration.py  test_multi_agent.py  test_server.py  test_tools.py
web/: app.py
