[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jinshiagent"
version = "0.5.1"
description = "AI Agent 工具框架 — 模块化、可组合、易扩展"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jinshi678" },
]
keywords = ["ai", "agent", "llm", "tools", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
# ChromaDB 向量数据库后端（可选，不可用时自动降级为内置纯 Python 后端）
# 注意：Windows 环境下 ChromaDB 可能因 onnxruntime/hnswlib 兼容性问题导致 segfault
# 此时 LongTermMemory 会自动降级为内置向量存储，无需此依赖
memory = [
    "chromadb>=0.5.0",
]
server = [
    "uvicorn>=0.30.0",
]
web = [
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "jinshiagent[memory,server,web,dev]",
]

[project.scripts]
jinshiagent = "jinshiagent.main:main"
jinshiagent-server = "jinshiagent.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jinshiagent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
